ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement4/input.ts.stderr
error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement4/input.ts:4:3
  |
4 |   }
  |   ^

